# sps_embryo

./: .gitignore  Cargo.toml  Dockerfile  ERRORS_ANALYSIS.md  PROJECT_STATUS.md  README.md  UNUSED_FILES_ANALYSIS.md  build-deb.sh  config.toml  dashboard.html  docker-compose.yml  experiment_log.md  manifest.json  paper_abstract.md  schema.sql  sps.tla  start_node.sh  swagger.json
.github/workflows/: ci.yml
src/: Cargo.toml  agent.rs  agent_architect.rs  agent_marketplace.rs  agent_metrics.rs  agent_visualizer.rs  api.rs  api_builder.rs  audit.rs  auto_audit.rs  auto_capability.rs  auto_installer.rs  auto_lease.rs  autonomous_worker.rs  backend_agent.rs  brain_agent.rs  browser_agent.rs  calendar_agent.rs  capabilities.rs  cli.rs  coder_agent.rs  cognition.rs  cognitive_loop.rs  command.rs  command_handler.rs  consensus.rs  consensus_engine.rs  conversation_memory.rs  creator_agent.rs  cross_partition.rs  database.rs  deterministic_scheduler.rs  discovery.rs  distributed.rs  effect_runner.rs  event.rs  event_chain.rs  event_chain_verifier.rs  event_driven_orchestrator.rs  event_log.jsonl  (+88 more)
tests/: chaos_tests.rs  integration_test.rs  unit_test.rs
