[package]
name = "sps_embryo"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3"
uuid = { version = "1.0", features = ["v7"] }
thiserror = "1.0"
tiny_http = "0.12"
ureq = "3.0"
toml = "1.0"
once_cell = "1.21"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
chrono = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
opentelemetry = "0.24"
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
crossbeam-channel = "0.5.15"
